# 2DSpark

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
dependencies/include/glad/: glad.h
include/: BitmapObject.h  CircleObject.h  ColorObject.h  Engine.h  Event.h  GameObject.h  InputManager.h  LineObject.h  Point.h  PointObject.h  Renderer.h  Sprite.h  TriangleObject.h
include/DemoGame/: CollisionDetectedEvent.h  CollisionDetector.h  FoodItem.h  SnakeHead.h
include/Events/: Event.h  EventBus.h  KeyReleasedEvent.h
include/Managers/: InputManager.h  WindowManager.h
include/Primitives/: AnimatedBitmapObject.h  BitmapObject.h  CircleObject.h  ColorObject.h  GameObject.h  LineObject.h  Point.h  PointObject.h  RectangleObject.h  TriangleObject.h
libraries/glad/include/glad/: gl.h
libraries/glad/src/: gl.c
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: BitmapObject.cpp  CircleObject.cpp  ColorObject.cpp  Engine.cpp  InputManager.cpp  LineObject.cpp  Point.cpp  PointObject.cpp  RectangleObject.cpp  Renderer.cpp  TriangleObject.cpp  glad.c  main.cpp
src/DemoGame/: CollisionDetector.cpp  FoodItem.cpp  SnakeHead.cpp
src/Events/: EventBus.cpp
src/Managers/: InputManager.cpp  WindowManager.cpp
src/Primitives/: AnimatedBitmapObject.cpp  BitmapObject.cpp  CircleObject.cpp  ColorObject.cpp  LineObject.cpp  Point.cpp  PointObject.cpp  RectangleObject.cpp  TriangleObject.cpp
